The callout button has been modified so that pressing it shows a new view controller with a web view, taking users to the Wikipedia entry for that city. A DetailViewController has been added for the purpose of displaying the web view and the mapView method in the view controller has been modified to reflect this change. Within the chooseMapType method, three new possible types of maps have been added for the user to choose from.

--- a/Project16/Base.lproj/Main.storyboard
+++ b/Project16/Base.lproj/Main.storyboard
@@ -41,6 +41,35 @@
             </objects>
             <point key="canvasLocation" x="1047.8260869565217" y="80.357142857142847"/>
         </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="kbs-cf-2HF">
+            <objects>
+                <viewController storyboardIdentifier="WebView" id="ZKH-Rh-TgO" customClass="DetailViewController" customModule="Project16" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Dxd-nw-HAC">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="45n-qM-0T6">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="979"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="N4H-lx-BgO"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <connections>
+                        <outlet property="webView" destination="45n-qM-0T6" id="JGC-4U-19S"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5nP-ys-FhO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1817.3913043478262" y="80.357142857142847"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="re1-ds-Fzg">
             <objects>
